<resources>
    <string name="app_name">Office Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="department_name">Departman: %s</string>
    <string name="delete">Sil</string>
    <string name="update">Güncelle</string>
    <string name="access">Erişim</string>
    <string name="add_work">İş ekle</string>
    <string name="departments">Departmanlar</string>
    <string name="works">İşler</string>
    <string name="users">Kullanıcılar</string>
    <string name="work_state">İş Durumu</string>
    <string name="cancel">İptal</string>
    <string name="username">kullanıcı adı</string>
    <string name="password">Şifre</string>
    <string name="user">kullanıcı</string>
    <string name="staff">hizmetli</string>
    <string name="admin">admin</string>
    <string name="log_out">Çıkış yap</string>
    <string name="report">Bildir</string>
    <string name="done">Yapıldı</string>
    <string name="name">Kullanıcı adı</string>
    <string name="login">Giriş yap</string>
</resources>