<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_dialog_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_margin="3dp"
                android:textColor="@color/c_yellow"
                android:textColorHint="@color/c_yellow"
                android:backgroundTint="@color/c_yellow"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_margin="3dp"
                android:textColor="@color/c_yellow"
                android:textColorHint="@color/c_yellow"
                android:backgroundTint="@color/c_yellow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departman: "
                    android:textSize="18sp"
                    android:textColor="@color/c_black"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:minWidth="30dp"
                    android:backgroundTint="@color/c_yellow"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/button_back"
                    android:popupBackground="@drawable/button_back3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="5dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="@color/c_yellow"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:background="@drawable/button_back3"
                    android:layout_margin="5dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staff"
                    android:textColor="@color/c_yellow"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:background="@drawable/button_back3"
                    android:layout_margin="5dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    android:textColor="@color/c_yellow"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:background="@drawable/button_back3"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_insert_or_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold"
                    android:textColor="@color/c_black"
                    android:background="@drawable/button_back"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/button_back"
                    android:textColor="@color/c_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>